# KnotAli

./: .gitignore  AUTHORS  CMakeLists.txt  README.md  results.afa  results.fa
conda_recipe/: README.md  build.sh  meta.yaml
example/: align_ex1.fa  align_ex2.fa  align_ex3.aln  align_ex4.stockholm  align_sol1.txt  align_sol2.txt  align_sol3.txt  align_sol4.txt
src/: ArrayOperations.cc  CMakeLists.txt  CalculateProbability.cc  HFold_iterative  HFold_iterative.cpp  Iterative-HFold.cpp  Iterative-HFold.hh  KnotAli  KnotAli.cc  Psuedoknot.txt  README.md  W_final.cpp  W_final.hh  allFold  cmdline.cc  cmdline.hh  hfold_iterative.h  main.cc  msa_utils.cpp  mutual_information.cc  mutual_information.hh  pseudo_loop.cpp  pseudo_loop.hh  s_energy_matrix.cpp  sparse_tree.cc  sparse_tree.hh  utils.cc  utils.hh
src/HFold/: h_common.cpp  hfold_validation.cpp
src/Iterative/: HFold_iterative.cpp  logfile.txt  msa_utils.h  notes.txt
src/SparseRNAFolD/: CMakeLists.txt  README.md
src/SparseRNAFolD/src/: SparseRNAFolD.cc  SparseRNAFolD.hh  base_types.hh  cmdline.cc  cmdline.hh  matrix.hh  simple_map.hh  trace_arrow.cc  trace_arrow.hh  trace_arrows.hh
src/SparseRNAFolD/src/ViennaRNA/params/: basic.h  params.c
src/SparseRNAFolD/src/params/: parameters_CC09_Vienna.txt  parameters_DP03_Vienna.txt  parameters_DP09_Vienna.txt
src/include/: ArrayOperations.h  CalculateProbability.h  RenyiMutualInformation.h  allFold.h  covariation.h  mutual_information.h  utils.h
src/simfold/: CMakeLists.txt  simfold
src/simfold/include/: simfold.h
src/simfold/src/common/: common.cpp
src/simfold/src/simfold/: s_energy_matrix.cpp  s_energy_matrix.h  s_hairpin_loop.cpp  s_internal_loop.cpp  s_min_folding.cpp  s_min_folding.h  s_specific_functions.cpp
workflows/: CondaUpload.yml
